--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,7 +5,7 @@ edition = "2021"
 
 [dependencies]
 wasm-bindgen = "0.2.93"
-web-sys = "0.3.70"
+web-sys = { version="0.3.70", features = ["Window", "Document", "HtmlCanvasElement", "CanvasRenderingContext2d"] }
 
 
 [bin]
